--- a/css/main.css
+++ b/css/main.css
@@ -8,13 +8,27 @@ html, body{
 	text-align: center;
 	background: black;
 	color: lime;
+	overflow: auto;
+}
+
+#menu-list{
+	padding:0;
+	margin:0;
 }
 
 .navItem{
-	display: inline-block;
+	float:left;
 	width: 100px;
-	border: 1px solid lime;
-	margin:5px;
+	border: 1px solid lime; /* lime? really? */
+	border-radius:2px;
+	margin:2px;
+	list-style: none;
+}
+
+.right-menu-item{
+	float:right;
+	margin:2px;
+	list-style: none;
 }
 
 main{
@@ -80,8 +94,4 @@ a:hover{
 	float: right;
 }
 
-.right-menu-item{
-	float:right;
-	margin:5px;
-	list-style: none;
-}
+
