--- a/css/film.css
+++ b/css/film.css
@@ -26,3 +26,41 @@
 .author{
 	color: black;
 }
+
+@media (max-width:1120px){
+	main{
+		width: 810px;
+	}
+	.filmSidePic{
+		width: calc(100% - 10px);
+	}
+	.filmSideInfo{
+		width: calc(100% - 15px);
+		padding: 0;
+		float: left;
+	}
+	.filmSideInfo p{
+		padding: 1em;
+	}
+}
+
+@media (max-width:820px){
+	main{
+		width: 540px;
+	}
+}
+
+
+@media (max-width:550px){
+	main{
+		width: 400px;
+	}
+
+	.film{
+		width: 100%;
+	}
+	.filmPic{
+		display: block;
+		margin:0 auto;
+	}
+}
