--- a/css/film.css
+++ b/css/film.css
@@ -1,5 +1,10 @@
 
-
+main{
+	width: 1100px;
+	margin: auto;
+	overflow: auto;
+	max-width: 100%;
+}
 .filmSideDiv{
 	margin-top: 1em;
 	height: 80%;
