--- a/css/search.css
+++ b/css/search.css
@@ -46,3 +46,13 @@ main{
     width: calc(100% - 222px);
     float: right;
 }
+
+@media(max-width: 400px){
+    .img-wrapper{
+        width: 100%;
+    }
+
+    .information{
+        width: 90%;
+    }
+}
