--- a/css/search.css
+++ b/css/search.css
@@ -1,3 +1,15 @@
+html, body{
+    padding: 0;
+    margin: 0;
+    background: lightgray;
+}
+
+text, p, label, span, input, li, a, time, h1, h2, h3{
+    font-size: 12px;
+    font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+}
+
+
 main{
     width: 1100px;
     border: 1px solid silver;
@@ -5,9 +17,9 @@ main{
     -webkit-box-shadow: 0 0 30px -4px rgba(153,133,153,1);
     -moz-box-shadow: 0 0 30px -4px rgba(153,133,153,1);
     box-shadow: 0 0 30px -4px rgba(153,133,153,1);
-    margin:0 auto;
     max-width: 95%;
     padding: 20px 4px;
+    margin: 20px auto;
 }
 
 #search-info{
@@ -20,11 +32,12 @@ main{
 .search-item{
     width: 800px;
     max-width: 100%;
-    border:1px solid silver;
+    border:2px solid grey;
     border-radius:2px;
     display:block;
     overflow:auto;
     margin: 2px auto;
+    background-color:silver;
 }
 
 .img-wrapper{
