--- a/css/menu.css
+++ b/css/menu.css
@@ -1,5 +1,5 @@
 body{
-    margin-top:20px;
+    margin-top:26px;
 }
 
 header{
@@ -18,6 +18,11 @@ nav{
     overflow: auto;
     margin: 0 auto;
     max-width: 100%;
+}
+
+text, p, label, span, input, li, a, time, h1, h2, h3{
+    font-size: 12px;
+    font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
 }
 
 #menu-list{
@@ -41,6 +46,16 @@ nav{
     list-style: none;
 }
 
+#search-wrapper{
+    border: 1px solid silver;
+    border-radius:1px;
+    float: right;
+    background-color:white;
+    height:20px;
+    width:250px;
+    margin:0px;
+}
+
 a{
     color: lime;
     text-decoration: none;
@@ -57,6 +72,8 @@ a:hover{
     width:80%;
     height:100%;
     float:left;
+    margin:0;
+    padding:0;
 }
 
 #search-button{
@@ -67,4 +84,6 @@ a:hover{
     width:20%;
     height:100%;
     float: right;
+    padding:0;
+    margin:0;
 }
