--- a/css/search.css
+++ b/css/search.css
@@ -1,15 +1,3 @@
-html, body{
-    padding: 0;
-    margin: 0;
-    background: lightgray;
-}
-
-text, p, label, span, input, li, a, time, h1, h2, h3{
-    font-size: 12px;
-    font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
-}
-
-
 main{
     width: 1100px;
     border: 1px solid silver;
@@ -19,7 +7,7 @@ main{
     box-shadow: 0 0 30px -4px rgba(153,133,153,1);
     max-width: 95%;
     padding: 20px 4px;
-    margin: 20px auto;
+    margin: 40px auto 0;
 }
 
 #search-info{
