--- a/css/film.css
+++ b/css/film.css
@@ -2,7 +2,7 @@
 
 .filmSideDiv{
 	margin-top: 1em;
-	height: 80%;
+	
 	border-radius: 10px;
 }
 .filmSideTitle{
@@ -15,13 +15,20 @@
 	width: 45%;
 	border: 3px solid silver;
 	border-radius: 10px;
+	height: 50%;
+	overflow:hidden;
 }
 .filmSideInfo{
-	width: 50%;
-	float: right;
+	width: calc(100% - 20px;);
 	border: 3px solid silver;
 	border-radius: 10px;
 	padding: 1em;
+}
+iframe{
+	width: calc(55% - 20px);
+	border: 3px solid silver;
+	border-radius: 10px;
+	height: 50%;
 }
 .author{
 	color: black;
