trailers and fixed movies layout

--- a/css/film.css
+++ b/css/film.css
@@ -10,25 +10,36 @@
 	padding-top: 1em;
 	font-size: 24px;
 }
-
-.filmSidePic{
-	width: 45%;
-	border: 3px solid silver;
-	border-radius: 10px;
-	height: 50%;
-	overflow:hidden;
-}
-.filmSideInfo{
-	width: calc(100% - 20px;);
-	border: 3px solid silver;
-	border-radius: 10px;
-	padding: 1em;
+.mediaWrapper{
+	height: 100%;
+	width: 50%;
+	float: left;
+	overflow: hidden;
 }
 iframe{
-	width: calc(55% - 20px);
-	border: 3px solid silver;
-	border-radius: 10px;
+	max-height: 100%;
+	max-width: 100%;
+	height: 300px;
+	min-width: 100%;
+	display: block;
+	margin: auto;
+}
+.slideShow{
+	width: 100%;
 	height: 50%;
+}
+
+.filmSidePic{
+	max-height: 100%;
+	max-width: 100%;
+	display: block;
+	margin: auto;
+}
+
+.filmSideInfo{
+	width: calc(50% - 20px);
+	float: left;
+	padding: 10px;
 }
 .author{
 	color: black;
@@ -42,16 +53,12 @@ li{
 	main{
 		width: 810px;
 	}
-	.filmSidePic{
-		width: calc(100% - 10px);
-	}
 	.filmSideInfo{
-		width: calc(100% - 15px);
-		padding: 0;
-		float: left;
+		width: calc(100% - 20px);
+		padding: 10px;
 	}
-	.filmSideInfo p{
-		padding: 1em;
+	.mediaWrapper{
+		width: 100%;
 	}
 }
 
@@ -69,9 +76,5 @@ li{
 
 	.film{
 		width: 100%;
-	}
-	.filmPic{
-		display: block;
-		margin:0 auto;
 	}
 }
