--- a/css/menu.css
+++ b/css/menu.css
@@ -14,7 +14,6 @@ header{
 nav{
     width: 1100px;
     text-align: center;
-    color: lime;
     overflow: auto;
     margin: 0 auto;
     max-width: 100%;
@@ -59,11 +58,11 @@ text, p, label, span, input, li, a, time, h1, h2, h3{
     margin:5px;
 }
 
-a{
+.menuLink{
     color: white;
     text-decoration: none;
 }
-a:hover{
+.menuLink:hover{
     color: black;
     background: lightblue;
 }
@@ -94,4 +93,107 @@ a:hover{
     float: right;
     padding:0;
     margin:0;
+}
+
+#drop-down{
+    display: none;
+}
+
+.fa-bars{
+    display: none;
+    padding: 2px 5px;
+    margin:1px;
+    border:1px solid white;
+    color:white;
+    border-radius:2px;
+    cursor:pointer;
+}
+
+.fa-bars:hover{
+    color:black;
+    background-color: white;
+}
+
+#logo-list-item{
+    float: left;
+    padding:0;
+    margin:0;
+    list-style: none;
+}
+
+#logo{
+    height:24px;
+    margin:5px;
+}
+
+.mobile-navigation{
+    display: block;
+    height:calc(100vh - 37px);
+    width: 200px;
+    z-index: 999999;
+    position: fixed;
+    top:37px;
+    left:100vw;
+    right:0;
+    background-color:#4948f6;
+    min-width: 200px;
+    max-width: 100vw;
+    transition: left 0.5s;
+}
+
+#mobile-menu-list{
+    padding:0;
+    margin:0;
+}
+
+.mobile-menu-item{
+    padding:5px;
+    font-size: 1em;
+    list-style: none;
+    font-weight: 600;
+}
+
+.mobile-menu-item:hover{
+    background-color:cornflowerblue;
+}
+
+.mobile-menu-list-bottom{
+    position: absolute;
+    display: block;
+    bottom: 0;
+    width: 100%;
+    margin: 0;
+    padding: 0;
+}
+
+
+
+
+.open{
+    left:calc(100vw - 200px);
+    -webkit-box-shadow: -15px 0 22px -10px rgba(0,0,0,0.75);
+    -moz-box-shadow: -15px 0 22px -10px rgba(0,0,0,0.75);
+    box-shadow: -15px 0 22px -10px rgba(0,0,0,0.75);
+    border-left: 1px solid #333;
+    transition: left 0.5s;
+
+}
+
+@media(max-width: 800px){
+
+    #drop-down{
+        display: block;
+    }
+
+    .navItem{
+        display:none;
+    }
+
+    #search-wrapper{
+        display: none;
+    }
+
+    .fa-bars{
+        display: block;
+    }
 }
