--- a/css/main.css
+++ b/css/main.css
@@ -13,6 +13,8 @@ main{
 	width: 1100px;
 	margin: auto;
 	max-width: 100%;
+	z-index: 999;
+	overflow: hidden;
 }
 
 .info-pane{
@@ -49,6 +51,9 @@ main{
 
 .filmPic{
 	max-width: 100%;
+	max-height: calc(100% - 10px);
+	display: block;
+	padding:5px;
 	overflow: hidden;
 }
 
