--- a/css/menu.css
+++ b/css/menu.css
@@ -1,5 +1,5 @@
 body{
-    margin-top:26px;
+    margin-top:34px;
 }
 
 header{
@@ -14,7 +14,6 @@ header{
 nav{
     width: 1100px;
     text-align: center;
-    overflow: auto;
     margin: 0 auto;
     max-width: 100%;
 }
@@ -24,9 +23,9 @@ text, p, label, span, input, li, a, time, h1, h2, h3{
     font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
 }
 
-#menu-list{
-    padding:0;
+ul{
     margin:0;
+    padding: 0;
 }
 
 .navItem{
@@ -35,6 +34,12 @@ text, p, label, span, input, li, a, time, h1, h2, h3{
     margin:5px;
     list-style: none;
 }
+
+#logo-link{
+    float: left;
+    height: 34px;
+}
+
 .navItem:hover{
     background: lightblue;
     boder: 1px solid lightblue;
@@ -44,14 +49,13 @@ text, p, label, span, input, li, a, time, h1, h2, h3{
 
 .right-menu-item{
     float:right;
-    margin:2px;
     list-style: none;
 }
 
 #search-wrapper{
     border: 1px solid silver;
     border-radius:1px;
-    float: right;
+    float: left;
     background-color:white;
     height:20px;
     width:250px;
@@ -76,7 +80,7 @@ text, p, label, span, input, li, a, time, h1, h2, h3{
     -moz-appearance:value;
     appearance:value;
     border: none;
-    width:80%;
+    width:calc(100% - 50px);
     height:100%;
     float:left;
     margin:0;
@@ -88,7 +92,7 @@ text, p, label, span, input, li, a, time, h1, h2, h3{
     -moz-appearance:value;
     appearance:value;
     border: none;
-    width:20%;
+    width:50px;
     height:100%;
     float: right;
     padding:0;
@@ -97,6 +101,8 @@ text, p, label, span, input, li, a, time, h1, h2, h3{
 
 #drop-down{
     display: none;
+    float:right;
+    margin:2px;
 }
 
 .fa-bars{
@@ -122,84 +128,83 @@ text, p, label, span, input, li, a, time, h1, h2, h3{
 }
 
 #logo{
-    height:24px;
-    margin:5px;
+    height:30px;
+    width: 30px;
+    margin:2px;
 }
-
-.mobile-navigation{
-    display: block;
-    height:calc(100vh - 37px);
-    width: 200px;
-    z-index: 999999;
-    position: fixed;
-    top:37px;
-    right:-200px;
-    background-color:#4948f6;
-    min-width: 200px;
-    max-width: 100vw;
-    transition: right 0.7s;
-}
-
-#mobile-menu-list{
-    padding:0;
-    margin:0;
-}
-
-.mobile-menu-item{
-    padding:5px;
-    font-size: 1em;
-    list-style: none;
-    font-weight: 600;
-}
-
-.mobile-menu-item:hover{
-    background-color:cornflowerblue;
-}
-
-.mobile-menu-list-bottom{
-    position: absolute;
-    display: block;
-    bottom: 0;
-    width: 100%;
-    margin: 0;
-    padding: 0;
-}
-
-
-
 
 .open{
-    right:0;
+    right:0px;
     -webkit-box-shadow: -15px 0 22px -10px rgba(0,0,0,0.75);
     -moz-box-shadow: -15px 0 22px -10px rgba(0,0,0,0.75);
     box-shadow: -15px 0 22px -10px rgba(0,0,0,0.75);
     border-left: 1px solid #333;
-    transition: right 0.7s;
-}
-
-@-webkit-keyframes slide{
-    100% { right: 0; }
-}
-
-@keyframes slide {
-    100% { right: 0; }
 }
 
 @media(max-width: 800px){
+
+    .menu-list{
+        display: block;
+        height:calc(100vh - 37px);
+        width: 200px;
+        z-index: 9999999;
+        position: fixed;
+        top:42px;
+        right:-200px;
+        background-color:#4948f6;
+        max-width: 100vw;
+        transition: right 0.7s;
+    }
 
     #drop-down{
         display: block;
     }
 
     .navItem{
-        display:none;
+        padding:5px;
+        font-size: 1em;
+        list-style: none;
+        font-weight: 600;
+        float: none;
+    }
+
+    .right-menu-item{
+        position: absolute;
+        display: block;
+        bottom: 0;
+        width: 100%;
+        margin: 0;
+        padding: 0;
     }
 
     #search-wrapper{
-        display: none;
+        float: left;
+        margin:10px;
+        width: calc(100% - 90px);
+    }
+
+    #logo{
+        width: 32px;
+        height: 32px;
+        margin: 5px;
+    }
+
+    #logo-link{
+        height: 42px;
     }
 
     .fa-bars{
         display: block;
+    }
+
+    #mobile-wrapper{
+        display: flex;
+        float: right;
+        width: calc(100% - 42px);
+        max-width: calc(100% - 42px);
+        margin-left:auto;
+    }
+    nav{
+        display: flex;
     }
 }
