--- a/css/main.css
+++ b/css/main.css
@@ -11,6 +11,11 @@ text, p, label, span, input, li, a, time, h1, h2, h3{
 .filmLink{
 	text-decoration: none;
 }
+
+.scroll-for-more{
+	float: right;
+}
+
 main{
 	width: 1100px;
 	margin: auto;
@@ -21,18 +26,23 @@ main{
 
 .info-pane{
 	width: auto;
-	overflow-y: auto;
     white-space: nowrap;
+    overflow-y:hidden;
+    -webkit-overflow-scrolling:touch;
 	padding: 5px;
-	height: auto;
+	height:260px;
 	max-width: 90%;
 	margin: 0 auto;
+	border:1px solid silver;
+	border-radius:2px;
 }
 
+
+
 .info-header-wrap{
-	width: 100%;
+	max-width: 90%;
 	display: block;
-	overflow: auto;
+	margin: 0 auto;
 }
 
 .info-header{
@@ -47,11 +57,15 @@ main{
     text-align: center;
 	width: 260px;
 	padding-bottom: 10px;
+	padding-right:10px;
 	background: #0C5FC4;
 	border: 1px solid silver;
-	border-radius:2px;
+	border-radius:4px;
 	height:200px;
 	overflow: hidden;
+	-webkit-box-shadow: 0px 0px 118px -27px rgba(0,0,0,0.75);
+    -moz-box-shadow: 0px 0px 118px -27px rgba(0,0,0,0.75);
+	box-shadow: 0px 0px 118px -27px rgba(0,0,0,0.75);
 }
 .filmDivPic{
 	background: black;
