--- a/css/main.css
+++ b/css/main.css
@@ -30,11 +30,12 @@ main{
     overflow-y:hidden;
     -webkit-overflow-scrolling:touch;
 	padding: 5px;
-	height:260px;
+	height:210px;
 	max-width: 90%;
 	margin: 0 auto;
 	border:1px solid silver;
 	border-radius:2px;
+	box-shadow:0 0 15px #333;
 }
 
 
@@ -78,6 +79,10 @@ main{
 	display: block;
 	margin: auto;
 	overflow: hidden;
+}
+
+.filmTittel{
+	text-shadow: 0px 0 10px #333;
 }
 
 /*@media (max-width:1120px){
