--- a/css/search.css
+++ b/css/search.css
@@ -2,8 +2,6 @@ main{
     width: 1100px;
     border: 1px solid silver;
     border-radius:2px;
-    -webkit-box-shadow: 0 0 30px -4px rgba(153,133,153,1);
-    -moz-box-shadow: 0 0 30px -4px rgba(153,133,153,1);
     box-shadow: 0 0 30px -4px rgba(153,133,153,1);
     max-width: 95%;
     padding: 20px 4px;
@@ -22,7 +20,6 @@ summary:hover{
 #advanced-search{
     border: 1px solid #333;
     border-radius: 2px;
-    margin: 0 auto;
 }
 td{
     padding: 5px;
@@ -32,7 +29,7 @@ td{
     display:block;
     padding:5px;
     border:1px solid silver; 
-    borde-radius:2px;
+    border-radius:2px;
     color:white;
     background-color:#333;
     margin-bottom:10px;
@@ -43,6 +40,33 @@ td{
     max-width: 100%;
     width: 1000px;
     margin:0 auto;
+}
+
+#fuzzy-search{
+    display: none;
+}
+
+#fuzzy-search input[type="search"]{
+    -webkit-appearance:none;
+       -moz-appearance:none;
+            appearance:none;
+    width: 100%;
+    height: 40px;
+    border:1px solid silver;
+    border-radius: 4px;
+    padding:5px;
+    margin-right:10px;
+}
+
+#fuzzy-search input[type="submit"]{
+    -webkit-appearance:none;
+       -moz-appearance:none;
+            appearance:none;
+    height: 40px;
+    padding:5px;
+    padding-right: 20px;
+    padding-left:20px;
+    border-radius: 4px;
 }
 
 #loadMoreButton{
@@ -68,13 +92,13 @@ td{
     border-radius:2px;
     margin: 2px auto;
     background-color:#e4f3f8;
-    -webkit-box-shadow: 0 0 30px -4px rgba(153,133,153,1);
-    -moz-box-shadow: 0 0 30px -4px rgba(153,133,153,1);
     box-shadow: 0 0 30px -4px rgba(153,133,153,1);
 }
 
 .search-item:hover{
-    transform: scale(1.01);
+    -webkit-transform: scale(1.01);
+            transform: scale(1.01);
+    -webkit-transition: 0.5s all;
     transition: 0.5s all;
 }
 
