--- a/css/menu.css
+++ b/css/menu.css
@@ -9,6 +9,10 @@ header{
     top:0;
     left:0;
     right:0;
+    z-index: 1000;
+    -webkit-box-shadow: 0px 3px 5px 0px rgba(84,85,89,0.96);
+    -moz-box-shadow: 0px 3px 5px 0px rgba(84,85,89,0.96);
+    box-shadow: 0px 3px 5px 0px rgba(84,85,89,0.96);
 }
 
 nav{
@@ -31,9 +35,10 @@ ul{
 
 .navItem{
     float:left;
-    padding:5px;
     margin:5px;
     list-style: none;
+    padding: 5px 0;
+    border-radius: 3px;
 }
 
 #logo-link{
@@ -41,11 +46,8 @@ ul{
     height: 34px;
 }
 
-.navItem:hover{
-    background: lightblue;
-    boder: 1px solid lightblue;
-    border-radius: 3px;
-
+.menuLink:hover{
+    background: rgba(129,130,134,0.96);
 }
 
 .right-menu-item{
@@ -66,10 +68,8 @@ ul{
 .menuLink{
     color: white;
     text-decoration: none;
-}
-.menuLink:hover{
-    color: black;
-    background: lightblue;
+    width: inherit;
+    border-radius: 3px;
 }
 
 .menuLink{
@@ -81,11 +81,11 @@ ul{
     -moz-appearance:value;
     appearance:value;
     border: none;
-    width:calc(100% - 50px);
+    width:calc(100% - 55px);
     height:100%;
     float:left;
     margin:0;
-    padding:0;
+    padding: 0 0 0 5px;
 }
 
 #search-button{
@@ -161,14 +161,18 @@ ul{
 
     #drop-down{
         display: block;
+        align-self: flex-start;
     }
 
     .navItem{
-        padding:5px;
         font-size: 1em;
         list-style: none;
         font-weight: 600;
         float: none;
+    }
+
+    .menuLink{
+        display: block;
     }
 
     .right-menu-item{
@@ -181,9 +185,8 @@ ul{
     }
 
     #search-wrapper{
-        float: left;
         margin:10px;
-        width: calc(100% - 90px);
+        width: 100%
     }
 
     #logo{
@@ -206,6 +209,7 @@ ul{
         width: calc(100% - 42px);
         max-width: calc(100% - 42px);
         margin-left:auto;
+        justify-content: space-between;
     }
     nav{
         display: flex;
