--- a/css/menu.css
+++ b/css/menu.css
@@ -1,3 +1,7 @@
+/*
+* Skrevet av kandidat 141
+*/
+
 body{
     margin-top:34px;
 }
@@ -134,7 +138,9 @@ ul{
     margin:2px;
 }
 
-
+/* 
+    Styles the open mobile navigation
+*/
 .open{
     right:0px;
     -webkit-box-shadow: -15px 0 22px -10px rgba(0,0,0,0.75);
@@ -143,6 +149,10 @@ ul{
     border-left: 1px solid #333;
 }
 
+/* 
+Changes the style of the navigation when 
+the browser width is less than 800px
+*/
 @media(max-width: 800px){
 
     .menu-list{
