--- a/css/film.css
+++ b/css/film.css
@@ -169,6 +169,24 @@
 	margin-left: 10px;
 	padding: 10px;
 }
+#summary_section{
+	margin-bottom: 15px;
+	border-bottom: 2px solid lightblue;
+}
+#reviews{
+	list-style: none;
+}
+#reviews li{
+	height: auto;
+	padding: 10px;
+	background: lightgray;
+	padding: 5px;
+	font-size: 14px;
+	border: 1px solid lightblue;
+	border-radius: 5px;
+	font-weight: bold;
+	margin: 10px 0 0 0; 
+}
 
 /* Summary section */
 
